src/test/deca/context/valid/ContextAvecObjet/DeclClass/classAextendsObject.deca
// Description:
//    Programme minimaliste de déclaration d'une classe avec extends Object, sans champ, sans méthode, sans main.
//
// Resultats:
//    ok
//

class A extends Object{}
