src/test/deca/context/invalid/ContextAvecObjet/DeclClass/classAextendsObect.deca
// Description:
//    Programme minimaliste de déclaration d'une classe avec extends Obect, sans champ, sans méthode, sans main.
//
// Resultats:
//    Erreur contextuelle ligne 8
//    type non défini

class A extends Obect{}